# wps-bot

./: .dockerignore  .env.example  .env.template  .gitignore  BUILD.md  Dockerfile  Dockerfile.alpine  MANUAL.md  README.md  app.py  build.ps1  build.sh  config.json.template  config.py  docker-compose.yml  pyproject.toml  requirements.txt  start.bat  start.sh  test_webhook.py  test_wps_event.py
bot/: __init__.py  llm_bot.py
bridge/: __init__.py  context.py  reply.py
channel/: __init__.py  wps_channel.py  wps_message.py
common/: __init__.py  logger.py  session_manager.py
lib/: wps_api.py  wps_crypto.py
